name: arith-encode
version: 1.0.1
cabal-version: >=1.16
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2014 Eric McCorkle.  All rights reserved.
maintainer: Eric McCorkle <emc2@metricspace.net>
author: Eric McCorkle
stability: Stable
homepage: https://github.com/emc2/arith-encode
bug-reports: https://github.com/emc2/arith-encode/issues
synopsis: A practical arithmetic encoding (aka Godel numbering) library.
description:
  A library providing tools and various schemes for encoding arbitrary datatypes
  as natural numbers.  The underlying theory is that of isomorphisms with the natural
  numbers (known as Godel numbering).  The library provides functionality for defining
  multiple such encodings for a given datatype, as well as a collection of stock
  encodings and combinators which can be used to build more complex encodings.
  .
  This has various uses, among them binary serialization/deserialization and
  enumeration testing.
category: Data, Serialization, Test, Testing
build-type: Simple

source-repository head
  type: git
  location: git@github.com:emc2/arith-encode.git

library
  exposed-modules:
    Data.ArithEncode
    Data.ArithEncode.Basic
    Data.ArithEncode.Binary
    Data.ArithEncode.Util
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base >=4.4.0 && <5,
    Cabal >=1.16.0,
    containers,
    unordered-containers,
    array,
    hashable,
    fgl,
    arithmoi,
    integer-logarithms,
    binary

test-suite UnitTest
  type: exitcode-stdio-1.0
  main-is: UnitTest.hs
  hs-source-dirs: src test
  default-language: Haskell2010
  ghc-options: -fhpc
  build-depends:
    base >=4.4.0 && <5,
    Cabal >=1.16.0,
    HUnit-Plus,
    containers,
    unordered-containers,
    array,
    hashable,
    fgl,
    arithmoi,
    integer-logarithms,
    binary
